objects/DM_Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Type__c</fullName>
        <label>Batch Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Account_Number__c</fullName>
        <description>Account number</description>
        <label>DM ACH Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Account_Type__c</fullName>
        <description>Account type: Saving or checking</description>
        <label>DM ACH Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Checking</fullName>
                </value>
                <value>
                    <fullName>DM_Saving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_ACH_Bank_Name__c</fullName>
        <description>Bank name</description>
        <inlineHelpText>Name of the bank</inlineHelpText>
        <label>DM ACH Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Debit_Amount__c</fullName>
        <description>Debit amount</description>
        <inlineHelpText>Debit amount</inlineHelpText>
        <label>DM ACH Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Drawer_Name__c</fullName>
        <description>ACH Drawer Name</description>
        <inlineHelpText>ACH Drawer Name</inlineHelpText>
        <label>DM ACH Drawer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ACH_End_Date__c</fullName>
        <label>DM ACH End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Frequency_Cycle__c</fullName>
        <label>DM ACH Frequency Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Frequency__c</fullName>
        <label>DM ACH Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Daily</fullName>
                </value>
                <value>
                    <fullName>DM_Weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Quarterly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Single-Payment</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly-PD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_ACH_Next_Debit_Date__c</fullName>
        <inlineHelpText>It is the next date on which the installment amount will be deducted from the borrower&apos;s account.</inlineHelpText>
        <label>DM ACH Next Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_ACH_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is ACH on for this account</description>
        <inlineHelpText>ACH (Automated Clearing House) is an electronic funds-transfer system. This payment system deals with payroll, direct deposit, tax refunds, consumer bills, tax payments to name a few.</inlineHelpText>
        <label>DM ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Relationship_Type__c</fullName>
        <description>ACH relationship type</description>
        <label>DM ACH Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Primary</fullName>
                </value>
                <value>
                    <fullName>DM_Spouse</fullName>
                </value>
                <value>
                    <fullName>DM_Secondary</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner Spouse</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner2</fullName>
                </value>
                <value>
                    <fullName>DM_Cosigner2 Spouse</fullName>
                </value>
                <value>
                    <fullName>DM_Third Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_ACH_Routing_Number__c</fullName>
        <description>Routing number</description>
        <inlineHelpText>ACH routing number is a nine digit number used to clear electronic transactions to and from your bank account.</inlineHelpText>
        <label>DM ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Second_Debit_Date__c</fullName>
        <label>DM ACH Second Debit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_ACH_Start_Date__c</fullName>
        <label>DM ACH Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_APR__c</fullName>
        <inlineHelpText>Annual Percentage Rate</inlineHelpText>
        <label>DM APR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Account_Name__c</fullName>
        <label>DM Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Account_Type__c</fullName>
        <label>DM Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Current</fullName>
                </value>
                <value>
                    <fullName>DM_Type2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please choose a account, which will be associated as a customer on this lending account.
You can create a new account, from the lookup window by clicking on new or select the existing account from the lookup.</inlineHelpText>
        <label>DM Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Accrual_Amount_Accounted_For__c</fullName>
        <label>DM Accrual Amount Accounted For</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Accrual_Entry_Stop_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interest accrual entries will not be created when this flag is checked.</description>
        <inlineHelpText>Interest accrual entries will not be created when this flag is checked.</inlineHelpText>
        <label>DM Accrual Entry Stop Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Accrual_Start_Date__c</fullName>
        <description>The date from which interest accrual starts</description>
        <inlineHelpText>The date from which interest accrual starts</inlineHelpText>
        <label>DM Accrual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Accrual_Start_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Accrual Start Days after the loan effective date.</description>
        <inlineHelpText>Number of Days after the Contract Date from When the Interest Accrual will Start.</inlineHelpText>
        <label>DM Accrual Start Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Accrual_Stop_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Accrual needs to be stopped.</description>
        <inlineHelpText>Indicates if the accrual has to be stopped.</inlineHelpText>
        <label>DM Accrual Stop Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Accrue_Past_Maturity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if interest accrual should happen after maturity.</description>
        <inlineHelpText>If this is unchecked, then the account will stop accruing interest post maturity.</inlineHelpText>
        <label>DM Accrue Past Maturity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Ach_Debit_Day__c</fullName>
        <description>Debit day for ACH payment</description>
        <inlineHelpText>Ach Debit Day</inlineHelpText>
        <label>DM ACH Debit Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Active_Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if there is an active investor on the lending account.</description>
        <inlineHelpText>This flag will becomes checked if there is any active investor on this lending account. This flag should not be changed by user manually.</inlineHelpText>
        <label>DM Active Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Actual_Interest_Only_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, interest only payments are set to actual interest amounts during the interest only period. If it is unchecked, the system computes a single interest only amount for all interest only payments.</inlineHelpText>
        <label>DM Actual Interest Only Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Add_Fee_Amount_To_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field when selected and in conjunction with &apos;Include In Dues&apos; in fee will add charge amounts to bill, thereby increasing bill amounts. Delinquent Amount will be the total amount due including fees billed.</description>
        <inlineHelpText>This field when selected and in conjunction with &apos;Include In Dues&apos; in fee will add charge amounts to bill, thereby increasing bill amounts. Delinquent Amount will be the total amount due including fees billed.</inlineHelpText>
        <label>DM Add Fee Amount To Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Additional_Loan_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>This amount  is added to the total refinanced amount to get the total loan amount for a Refinance Contract.</inlineHelpText>
        <label>DM Additional Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Adjust_Deposit_Amount_In_Payoff__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field indicates whether to consider the deposit amount for this deposit in Payoff calculation or not</description>
        <inlineHelpText>This field indicates whether to consider the deposit amount for this deposit in Payoff calculation or not</inlineHelpText>
        <label>DM Adjust Deposit Amount In Payoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Aging__c</fullName>
        <formula>IF(AND(DM_Number_of_Days_Overdue__c=0),&quot;0&quot;,
        IF(AND(DM_Number_of_Days_Overdue__c&gt;0,DM_Number_of_Days_Overdue__c&lt;=30), &quot;1-30&quot;,
        IF(AND(DM_Number_of_Days_Overdue__c&gt;30,DM_Number_of_Days_Overdue__c&lt;=60),&quot;31-60&quot;,
        IF(AND(DM_Number_of_Days_Overdue__c&gt;60,DM_Number_of_Days_Overdue__c&lt;=90),&quot;61-90&quot;,
        IF(AND(DM_Number_of_Days_Overdue__c&gt;90,DM_Number_of_Days_Overdue__c&lt;=120),&quot;91-120&quot;,
        IF(AND(DM_Number_of_Days_Overdue__c&gt;120,DM_Number_of_Days_Overdue__c&lt;=180),&quot;121-180&quot;,
        IF(DM_Number_of_Days_Overdue__c&gt;180,&quot;180+&quot;,&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It is used to determine whether a company carries overdue debtors that may never repay their bills.</inlineHelpText>
        <label>DM Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Allow_Interest_Split_before_Maturity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Allow Interest Split before Maturity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Amortization_Schedule_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag is set to true when the amortization schedule is successfully generated for a contract with Funding In Tranches as &apos;Yes&apos; .</inlineHelpText>
        <label>DM Amortization Schedule Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Amortization_Term__c</fullName>
        <inlineHelpText>This is the amortization term of the loan. This can be equal or greater than the Term of the loan. If not specified, it is equal to the Term.</inlineHelpText>
        <label>DM Amortization Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Amount_Due_Till_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This includes delinquent amount + any unpaid fees on the account.</description>
        <inlineHelpText>This includes delinquent amount + any unpaid fees on the account.</inlineHelpText>
        <label>DM Amount Due Till Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Amount_to_Current__c</fullName>
        <formula>DM_Delinquent_Amount__c +   IF(DM_Delinquent_Amount__c==0, 0, DM_Fees_Remaining__c) + IF(DM_Delinquent_Amount__c==0, 0, DM_Capitalized_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This includes delinquent amount + any unpaid fees on the account.</inlineHelpText>
        <label>DM Amount to Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Application Received Date.</inlineHelpText>
        <label>DM Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Approval_Date__c</fullName>
        <inlineHelpText>The date on which the loan is approved.</inlineHelpText>
        <label>DM Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>DM Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Auto_Create_Excess_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Auto Create Excess Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Auto_Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the investment product loan is auto renewable or not.</description>
        <label>DM Auto Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Available_Amount_For_Next_Funding__c</fullName>
        <formula>(DM_Credit_Limit_Current__c -  DM_Principal_Remaining__c ) +  DM_Excess__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field is only available for LOC Type Contracts. Field suggests amount available for next disbursal.</inlineHelpText>
        <label>DM Available Amount For Next Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Average_Monthly_Income__c</fullName>
        <label>DM Average Monthly Income</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_Balloon_Payment__c</fullName>
        <inlineHelpText>Heavy payment at the end of a loan payment schedule.</inlineHelpText>
        <label>DM Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Bill_Follow_Schedules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will represent if bill follows the schedules.</description>
        <inlineHelpText>This field will represent if bill follows the schedules.</inlineHelpText>
        <label>DM Bill Follow Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Boarding_Date__c</fullName>
        <label>DM Boarding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Borrower_ACH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Borrower ACH</description>
        <inlineHelpText>Borrower ACH</inlineHelpText>
        <label>DM Borrower ACH</label>
        <referenceTo>DM_Bank_Account__c</referenceTo>
        <relationshipName>Lending</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>DM CL Contract</relationshipLabel>
        <relationshipName>DM_CL_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Buyback_Date__c</fullName>
        <label>DM Buyback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Buyback_Status__c</fullName>
        <inlineHelpText>This field is used to indicate the loan&apos;s buyback status.</inlineHelpText>
        <label>DM Buyback Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Not Yet Boarded</fullName>
                </value>
                <value>
                    <fullName>DM_Boarded</fullName>
                </value>
                <value>
                    <fullName>DM_Disbursed By Bank</fullName>
                </value>
                <value>
                    <fullName>DM_Buyback Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Cancellation_Tolerance_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM Cancellation Tolerance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Capitalization_Frequency__c</fullName>
        <description>This decides the frequency at which capitalization will be done</description>
        <inlineHelpText>This decides the Capitalization Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly
Quarterly
Semi-Annual
Annual
Single-Payment</inlineHelpText>
        <label>DM Capitalization Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Daily</fullName>
                </value>
                <value>
                    <fullName>DM_Weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Quarterly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Single-Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Capitalized_Fee__c</fullName>
        <label>DM Fees Capitalized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Capitalized_Interest__c</fullName>
        <label>DM Interest Capitalized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Case_Safe_ID__c</fullName>
        <label>DM Case Safe ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Change_Recurring_ACH_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Change Recurring ACH Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Capitalized_Fees__c</fullName>
        <label>DM Charged Off Capitalized Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Capitalized_Interest__c</fullName>
        <label>DM Charged Off Capitalized Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Date__c</fullName>
        <inlineHelpText>Date on which the account was charged off.</inlineHelpText>
        <label>DM Charged Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Charged off Fees Balance.</inlineHelpText>
        <label>DM Charged Off Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Charged off Interest Balance.</inlineHelpText>
        <label>DM Charged Off Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Charged_Off_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Charged off Principal/Advance Balance.</inlineHelpText>
        <label>DM Charged Off Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Closed_Date__c</fullName>
        <inlineHelpText>The date when the loan was closed</inlineHelpText>
        <label>DM Paid Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Collateral_Notes__c</fullName>
        <description>Collateral Notes</description>
        <inlineHelpText>Collateral Notes</inlineHelpText>
        <label>DM Collateral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DM_Collateral_Type__c</fullName>
        <label>DM Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Fixed Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Contact_Name__c</fullName>
        <label>DM Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please choose a contact, which will be associated as a customer on this lending account.
You can create a new contact, from the lookup window by clicking on new or select the existing contact from the lookup.</inlineHelpText>
        <label>DM Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Contingency_Status_Code__c</fullName>
        <description>Field Stores contingency status of a contract.</description>
        <inlineHelpText>Field Stores contingency status of a contract.</inlineHelpText>
        <label>DM Contingency Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Bankruptcy (B)</fullName>
                </value>
                <value>
                    <fullName>DM_Deceased (D)</fullName>
                </value>
                <value>
                    <fullName>DM_Fraudulent (F)</fullName>
                </value>
                <value>
                    <fullName>DM_Duplicate (K)</fullName>
                </value>
                <value>
                    <fullName>DM_No Communication (X)</fullName>
                </value>
                <value>
                    <fullName>DM_Suspend Disbursal (Z)</fullName>
                </value>
                <value>
                    <fullName>DM_Normal (N)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Contract_Type__c</fullName>
        <inlineHelpText>Contract Type - New or Refinance</inlineHelpText>
        <label>DM Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Contractual_Due_Day__c</fullName>
        <inlineHelpText>Day on which customer will be due on billing cycle.</inlineHelpText>
        <label>DM Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Contractual_Index_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Index Rate at the time of Contract</inlineHelpText>
        <label>DM Index Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Contractual_Interest_Rate__c</fullName>
        <inlineHelpText>Contractual Interest Rate on the contract.</inlineHelpText>
        <label>DM Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Contractual_Second_Due_Day__c</fullName>
        <inlineHelpText>Second Due Day which will be used only for Semi-Monthly PD loans.</inlineHelpText>
        <label>DM Second Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Credit_Limit_Current__c</fullName>
        <description>Current Credit Limit for Line of Credit</description>
        <inlineHelpText>This is the current maximum advance limit and can differ from contractual credit limit if the user decide to change the credit limit for the customer.
Total advance withdrawn must not exceed this limit at any point of time.</inlineHelpText>
        <label>DM Current Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Credit_Limit__c</fullName>
        <description>Credit Limit for Line of Credit</description>
        <inlineHelpText>This is the contractual maximum advance limit, total advance withdrawn must not exceed this limit.</inlineHelpText>
        <label>DM Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Current_Draw_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If user extends the draw term, then the new draw term will be stored in this field</description>
        <inlineHelpText>Current Draw Term</inlineHelpText>
        <label>DM Current Draw Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Current_Due_Day_Numeric__c</fullName>
        <label>DM Current Due Day(Numeric)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Current_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Current Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Current_MCA_Fraction_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM Current MCA Fraction Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_10__c</fullName>
        <label>DM Custom Field 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_11__c</fullName>
        <label>DM Custom Field 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Custom_Field_12__c</fullName>
        <label>DM Custom Field 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Delinquency_Grace_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>It is the number of days for which the system will wait before categorizing the account as a delinquent account.</inlineHelpText>
        <label>DM Delinquency Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Delinquent_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total Unpaid bills/invoices amount on this account.</inlineHelpText>
        <label>DM Delinquent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Deposit_Interest_Accrued__c</fullName>
        <description>This field stores the sum of interest accrued for all the deposits from last accrual date of the contract.</description>
        <inlineHelpText>This field stores the sum of interest accrued for all the deposits from last accrual date of the contract.</inlineHelpText>
        <label>DM Deposit Interest Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Deposit_Interest_Posted__c</fullName>
        <description>This field stores the sum of interest posted for all the deposits. It gets updated at the time of interest posting on the contract.</description>
        <inlineHelpText>This field stores the sum of interest posted for all the deposits of the contract.</inlineHelpText>
        <label>DM Deposit Interest Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Deposit_Interest_Remaining__c</fullName>
        <description>This field stores the sum of interest remaining for all the deposits from last accrual date of the contract.</description>
        <inlineHelpText>This field stores the sum of interest remaining for all the deposits from last accrual date of the contract.</inlineHelpText>
        <label>DM Deposit Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Deposit_Payment_Offset_Days__c</fullName>
        <description>This field stores the value of offset days after which deposit amount should be considered for payment in case of failure of default payment setup like APS</description>
        <inlineHelpText>This field stores the value of offset days after which deposit amount should be considered for payment in case of failure of default payment setup like APS</inlineHelpText>
        <label>DM Deposit Payment Offset Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Disbursal_Amount__c</fullName>
        <description>Disbursal Amount</description>
        <inlineHelpText>Amount to be disbursed to the borrower</inlineHelpText>
        <label>DM Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Disbursal_By_Bank_Date__c</fullName>
        <label>DM Disbursal By Bank Date</label>
        <type>Date</type>
    </fields>
</CustomObject>